tests/good/examples/hello_world.go
package main

import "fmt"

func main() {
	fmt.Print("Hello, world\n")
}

/*
== Expected program output ==
Hello, world
*/
