tests/bad/func/multiple-func-args.go
package main

func toto(a int, a int) {}
